se agrego una interfaz, al parecer se soluciono lo del maven java